decision tree and tree-based algorithm

--- a/Sci-kit Learn.ipynb
+++ b/Sci-kit Learn.ipynb
@@ -46,7 +46,7 @@
    "id": "008396ce-4378-4711-bb2d-7a6f9ba16297",
    "metadata": {},
    "source": [
-    "**How does machine learning works?\n",
+    "**How does machine learning works?**\n",
     "- supervised learning\n",
     "- unsupervise learning\n",
     "- a data set is divided into training set and testing set, then evaluate its predictability"
@@ -94,6 +94,49 @@
     "2. Random Forest (prediction)/bootstrap aggregating/bagging\n",
     "3. pruning algorithms/information gain/minimal cost-complexity pruning"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4ca7a41-131c-4f94-aee7-f9a9abdd2852",
+   "metadata": {},
+   "source": [
+    "### How decision tree classifier works?\n",
+    "https://www.analyticsvidhya.com/blog/2016/04/tree-based-algorithms-complete-tutorial-scratch-in-python/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "961bdc61-fb89-45e9-b3ff-b3c58cdbb89b",
+   "metadata": {},
+   "source": [
+    "It is under the umbrella of **Supervised Learning** algorithm, which is mainly used for classification problem. It works for both categorical **(Classification tree)** and continuous **(Regression tree)** dependent variables. It splits the population into two or more heterogeneous groups using various techniques like Gini index, Information gain, entropy. As well as identifying the most significant variable. <br>\n",
+    "It can also be used in data exploration stage. For example, we are working on a problem where we have information available in hundreds of variables, there decision tree will help to identify most significant variable.<br>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57138c20-086c-45fa-a191-602e07f08abc",
+   "metadata": {},
+   "source": [
+    "#### How does a tree based algorithms decide where to split\n",
+    "The decision of making strategic splits heavily affects a tree’s accuracy. The decision criteria is different for classification and regression trees.\n",
+    "\n",
+    "Decision trees use multiple algorithms to decide to split a node in two or more sub-nodes. The creation of sub-nodes increases the homogeneity of resultant sub-nodes. In other words, we can say that purity of the node increases with respect to the target variable. Decision tree splits the nodes on all available variables and then selects the split which results in most homogeneous sub-nodes.\n",
+    "\n",
+    "The algorithm selection is also based on type of target variables. Let’s look at the four most commonly used algorithms in decision tree:\n",
+    "1. Gini\n",
+    "2. Chi-square\n",
+    "3. Information gain\n",
+    "4. Reduction in Variance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18e4753b-c2bf-4afa-9a3a-1a8c7d225880",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -183,12 +226,23 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "472e3bc0-d330-4488-b952-75c698800709",
+   "cell_type": "markdown",
+   "id": "7a465bc2-5b9a-4496-8a00-0f42bd09243d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Random Forest\n",
+    "https://builtin.com/data-science/random-forest-algorithm\n",
+    "\n",
+    "https://towardsdatascience.com/an-implementation-and-explanation-of-the-random-forest-in-python-77bf308a9b76\n",
+    "\n",
+    "https://www.datacamp.com/community/tutorials/random-forests-classifier-python\n",
+    "\n",
+    "https://stackabuse.com/random-forest-algorithm-with-python-and-scikit-learn/\n",
+    "\n",
+    "\n",
+    "It is essentially an ensemble of decision trees. While decision trees are better at classification, random forest is better at prediction. \n",
+    "multiple decision trees, usually trained with the \"bagging\" method which is generally combination learning models increases the overall result in terms of accuracy and stability. "
+   ]
   },
   {
    "cell_type": "code",
