scipy stats intro

--- a/ANOVA.ipynb
+++ b/ANOVA.ipynb
@@ -14,16 +14,22 @@
    "id": "244df04b-f91d-41dd-911f-0767aacb65eb",
    "metadata": {},
    "source": [
-    "## Overview of Scipy Stats library"
+    "## Overview of Scipy Stats library\n",
+    "https://docs.scipy.org/doc/scipy/reference/stats.html"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bb4c303c-4526-45bc-b536-c2ecdbe7b31c",
+   "cell_type": "markdown",
+   "id": "2cb02ed5-2927-40c9-a36a-1ddd573cd0c9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "This module contains a large number of probability distributions, summary and frequency statistics, correlation functions and statistical tests, masked statistics, kernel density estimation, quasi-Monte Carlo functionality, and more.\n",
+    "1. probability distribution\n",
+    "2. summary statistics\n",
+    "3. frequency statistics\n",
+    "4. Correlation functions: f_oneway(*args[, axis]) Perform one-way ANOVA.\n",
+    "5. Statistical tests"
+   ]
   },
   {
    "cell_type": "code",
@@ -50,12 +56,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2e45ddf5-13b6-487b-9d40-5af6ebc58825",
+   "cell_type": "markdown",
+   "id": "f4cffac8-20d8-4199-9925-10dc44211965",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "1. find a dataset\n",
+    "2. if dataset fits assumption of using ANOVA\n",
+    "3. apply ANOVA\n",
+    "4. plot"
+   ]
   },
   {
    "cell_type": "code",
