--- a/Sci-kit Learn.ipynb
+++ b/Sci-kit Learn.ipynb
@@ -7,17 +7,9 @@
     "tags": []
    },
    "source": [
-    "# Sci-kit Learn\n",
-    "## link:\n",
+    "# Scikit-Learn\n",
+    "\n",
     "***"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "120287ba-95b9-4238-a8e4-0c142b52fdfe",
-   "metadata": {},
-   "source": [
-    "What is Sci-kit Learn?"
    ]
   },
   {
@@ -25,58 +17,76 @@
    "id": "934aed75-029f-4cf1-9796-ecb105daaaa5",
    "metadata": {},
    "source": [
-    "## Overview of sci-kit Learn\n",
-    "Scikit-learn (formerly scikits.learn and also known as sklearn) is a free software machine learning library for the Python programming language. It was initially developed by David Cournapeau in 2007. It features various classification, regression and clustering algorithms and is designed to interoperate with the Python numerical and scientific libraries NumPy and SciPy. (wiki: https://en.wikipedia.org/wiki/Scikit-learn) <br>\n",
-    "- built upon SciPy\n",
-    "- include NumPy, Matplotlib, Pandas\n",
-    "- focus on modeling data, while NumPy, Pandas focus on loading, manipulating and summarizing data [C1] <br/>\n",
+    "# Overview of scikit-learn\n",
+    "<br>\n",
+    "Scikit-learn (formerly scikits.learn and also known as sklearn) is an open source machine learning library for the Python programming language. It was initially developed by David Cournapeau in 2007. It features a large number of common algorithms,  including classification, regression, clustering and dimensionality reduction algorithms. It is designed to interoperate with the Python numerical and scientific libraries NumPy, Pandas, SciPy and Matplotlib. (wiki: https://en.wikipedia.org/wiki/Scikit-learn) <br>\n",
+    "\n",
+    "In general, **Machine Learning** is about creating models from data. Models are usully divided into 3 groups, namely supervised learning, unsupervised learning and reinforcement learning. Scikit-learn deals with the former two. It provides tools for model fitting, model selection and evaluation. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bbd034cf",
+   "metadata": {},
+   "source": [
+    "## So what is supervised learning and unsupervised learning? \n",
+    "\n",
+    "#### Supervised learning\n",
+    "The data set comes with a column(s) of attribute(s) as target values that we want to predict. For example in the famous Iris dataset, \"species\" is the attribute we would want the model to predict. Depending on data type of the attribute(s), it is divided into two categories of algorithms, namely classification and regression. \n",
+    "\n",
+    "*  **Classification**: target attributes are in discrete form, with a limited number of categories. Aims to correctly label the target attributes. E.g., correctly label the speicies in Iris dataset\n",
+    "*  **Regression**: target attributes are continuous variables, e.g. prediction of salmon's length as a function of its age and weight."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2ab7546",
+   "metadata": {},
+   "source": [
+    "#### Unsupervised learning\n",
+    "The data set does not come with a column of attribute to be predicted. It aims to identify patterns from the data set. \n",
+    "*   **Clustering**: aim to discover groups of similar examples within the data\n",
+    "*   **Density estimation**: aim to determine the distribution of data within the sample \n",
+    "*   **Dimentionality reduction**: project data from high-dimensional space down to 2/3D for the purpose of visualization, summarisation and feature selection. (scikit-learn website)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0aebc98c",
+   "metadata": {},
+   "source": [
+    "## Scikit-learn divided their algorithms into 6 categories as follows:\n",
     "\n",
     "1. Classification\n",
     "2. Regression\n",
     "3. Clustering\n",
     "4. Dimensionality reduction\n",
-    "5. Model selection\n",
-    "6. Preprocessing <br/>\n",
-    "(from scikit-learn.org)\n",
-    "Scikit-learn is an open source machine learning library that supports supervised and unsupervised learning. It also provides various tools for model fitting, data preprocessing, model selection and evaluation, and many other utilities.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "008396ce-4378-4711-bb2d-7a6f9ba16297",
-   "metadata": {},
-   "source": [
-    "**How does machine learning works?**\n",
-    "- supervised learning\n",
-    "- unsupervise learning\n",
-    "- a data set is divided into training set and testing set, then evaluate its predictability"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2e21b11c-6120-415b-b018-3b94e0d792e2",
-   "metadata": {},
-   "source": [
-    "I. Supervised learning: learn from sameple data to predict with new data\n",
-    "*  Classification: discrete form, a limited number of categories. aim to label them with correct category or class\n",
-    "*  Regression: continuous variables, e.g. prediction of salmon's length as a function of its age and weight\n",
+    "5. Model selection \n",
+    "    - Cross validation to check accuracy of supervised models\n",
+    "    - Emsemble methods for combining the predictions of multiple supervised models\n",
+    "6. Preprocessing \n",
+    "    - Feature extraction to extract features from data to define the attributes in image and text data\n",
+    "    - Feature selection to identify useful attributes to create supervised models\n",
     "\n",
-    "II. Unsupervised learning: consists sets of input without corresponding target values \n",
-    "*   Clustering: aim to discover groups of similar examples within the data\n",
-    "*   Density estimation: aim to determine the distribution of data within the sample OR project data from high-dimensional space down to 2/3D for the purpose of visualization\n"
+    "ref:https://www.tutorialspoint.com/scikit_learn/scikit_learn_introduction.htm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee24a7f1",
+   "metadata": {},
+   "source": [
+    "The steps in using sklearn as follows, \n",
+    "1. arrange the data into features (x) and target(y, to be predicted),  \n",
+    "2. a data set is then divided into training set and testing set, \n",
+    "3. fit the model which is training \n",
+    "5. predict() which is testing set, predicting target\n",
+    "4. then evaluate its predictability"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2fedee6f-d932-4fbd-a9e8-b0428ba4378c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5e5863af-27b0-429d-9645-5cd2c78dcddf",
    "metadata": {},
    "outputs": [],
@@ -86,14 +96,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08e5d208-2022-406e-8577-37893f74cd54",
+   "id": "e5e2fb80",
    "metadata": {},
    "source": [
-    "**What algorithms I might like to include in assessment?**\n",
-    "1. Decision Tree (explanation)/ gini impurity/ID3\n",
-    "2. Random Forest (prediction)/bootstrap aggregating/bagging\n",
-    "3. pruning algorithms/information gain/minimal cost-complexity pruning"
+    "# Decision Tree based algorithms"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30dbb1bf",
+   "metadata": {},
+   "source": [
+    "Interested in decision tree, it is easy enough to understand which we probably use it everyday to make decision, \n",
+    "pick 3 algorithms which are related to DT, namely Gini impurity, Entropy or information gain, and bootstrap aggregating which is an ensemble method to enhance its accuracy. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29fe7a9e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -109,8 +133,10 @@
    "id": "961bdc61-fb89-45e9-b3ff-b3c58cdbb89b",
    "metadata": {},
    "source": [
-    "It is under the umbrella of **Supervised Learning** algorithm, which is mainly used for classification problem. It works for both categorical **(Classification tree)** and continuous **(Regression tree)** dependent variables. It splits the population into two or more heterogeneous groups using various techniques like Gini index, Information gain, entropy. As well as identifying the most significant variable. <br>\n",
-    "It can also be used in data exploration stage. For example, we are working on a problem where we have information available in hundreds of variables, there decision tree will help to identify most significant variable.<br>\n"
+    "**Decision Tree** is under the umbrella of **Supervised Learning** algorithm, which is mainly used for classification problem. It works for both categorical **(Classification tree)** and continuous **(Regression tree)** dependent variables. It splits the population into two or more heterogeneous groups using various techniques like Gini index, Entropy. As well as identifying the most significant variable. <br>\n",
+    "\n",
+    "It can also be used in data exploration stage. For example, we are working on a problem where we have information available in hundreds of variables, there decision tree will help to identify most significant variable.<br>\n",
+    "[ref]"
    ]
   },
   {
